# audio_swedish_2

./: .gitignore  main.py  makefile  pyproject.toml  sort.bash
jobs/: Dockerfile  create_jobs.bash  debug.ipynb  fix_permis.bash  job1.py  job2.py  makefile
jobs_tokenize/: Dockerfile  create_jobs.bash  job.py  makefile
jobs_train/: Dockerfile  create_job.py  job.py  makefile  requirements.txt  test_job.ipynb
notebooks/: generate_syntetic_audio.ipynb  info_wav.ipynb  request.json  tokenise.ipynb  train.ipynb  whisper_8sidor.ipynb  whisper_it.ipynb
scrapper/: convert_mp3.bash  download_8sidor.ipynb  make_webdataset.ipynb  scrape_8sidor.ipynb
