[project]
name = "audio-swedish-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-texttospeech>=2.30.0",
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "pandas>=2.3.2",
    "pip>=25.2",
    "playwright>=1.55.0",
]
